<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_endpoints"
        android:icon="@drawable/ic_endpoints"
        android:title="@string/endpoints"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_diagnostics"
        android:icon="@drawable/ic_info"
        android:title="Utilidades"
        app:showAsAction="never" />

</menu>
